fixed issue with styles overlapping

--- a/CSS/layout1.css
+++ b/CSS/layout1.css
@@ -82,7 +82,7 @@ nav ul li {
     MOBILE STYLES 0px to 640px 
    ============================= */
 
-@media only screen and (max-width:640px) {
+@media only screen and (max-width:700px) {
 
 /* NAV MENU STYLES */
 
@@ -122,7 +122,7 @@ nav ul li {
     TABLET AND DESKTOP STYLES GREATER THAN 640px
    ============================================== */
 
-@media only screen and (min-width:640px) {
+@media only screen and (min-width:701px) {
 
 /* NAV MENU STYLES */
 
